# ot-harjoitustyo

./: .gitignore  README.md
coin-collecter-app/: .coveragerc  .env.test  pyproject.toml  tasks.py
coin-collecter-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoaly.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
coin-collecter-app/src/: build.py  game_logic.py  game_loop.py  index.py  level.py  main.py  renderer.py  utils.py
coin-collecter-app/src/db/: config.py  database_connection.py  initialize_database.py
coin-collecter-app/src/game_logic/: game_logic.py  level.py
coin-collecter-app/src/repositories/: score_repository.py
coin-collecter-app/src/sprites/: coin.py  monster.py  player.py
coin-collecter-app/src/tests/: conftest.py  test_game_logic.py  test_game_loop.py  test_level.py
coin-collecter-app/src/tests/repositories/: test_score_repository.py
coin-collecter-app/src/ui/: game_loop.py  renderer.py  ui.py
coin-collecter-app/src/utils/: utils.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
