[project]
name = "coin-collecter-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Heidi Tapani",email = "heidi.tapani@helsinki.fi"}
]
requires-python = "^3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"
pytest = "^9.0.2"
pylint = "^4.0.5"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
